Design Three Completed

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body { font-family: 'Roboto', sans-serif;}
 
 /* Common Header */
-.design-one, .design-two {height:100vh; position:relative;}
+.design-one, .design-two, .design-three {height:100vh; position:relative;}
 .chatbot {width:400px; height:530px; position:absolute; right:20px; bottom:20px; box-shadow:0 0 5px 2px rgba(0, 0, 0, 0.25); border-radius:10px;}
 .chatbot .header {border-bottom:1px solid rgba(0, 0, 0, 0.15);}
 .p-image {padding:5px 0;}
@@ -44,6 +44,16 @@ body { font-family: 'Roboto', sans-serif;}
 .chat-content .carousel-control-next,.chat-content .carousel-control-prev {top:-35px; width:fit-content; height:fit-content; padding:8px 15px; opacity: 1;}
 .chat-content .carousel-control-next {left:330px;}
 .chat-content .carousel-control-prev {left:245px;}
+
+/* Design-three */
+.design-three .chatbot {height:585px;}
+.design-three .chat-content {height:440px; overflow-y:hidden;}
+.p-third {box-shadow:0 0 3px 1px rgba(0, 0, 0, 0.20); padding:15px; margin-bottom:15px; font-family:'Montserrat',sans-serif; border-radius:3px;}
+.p-third p {color:rgba(0, 0, 0, 0.70); margin-bottom:0; font-size:14px;}
+.p-third h5 {font-weight:600; font-size:18px;}
+#moreText {display:none;}
+#moreText-1 {display:none;}
+.read-more-btn {background:none; border:none; color:#57a0e3;}
 
 /* Responsive */
 @media (max-width:767px) {
